Thu Sep 14 09:12:03 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c, unrar20.c, unrarppm.c: improve handling of
		corrupted files.

Thu Sep 14 00:35:56 CEST 2006 (acab)
------------------------------------
  * docs: Added preliminary documentation related to Edvin phishing module.
          Big thanks to Google for the SoC, to Edvin for the very good
	  work and finally to paste.debian.org for helping with the merge!

  * libclamav: Using CL_EXPERIMENTAL instead of CONFIG_EXPERIMENTAL
               in suecrypt decryptor

Wed Sep 13 22:38:22 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Committed ACAB's merge of Edvin's Phish code,
  			configure --enable-experimental to use it.

Wed Sep 13 19:41:20 CEST 2006 (acab)
------------------------------------
  * libclamav/mbox.c: checkURLs reprototyped to prepare the merge of the
                      phishing module

Wed Sep 13 17:46:06 CEST 2006 (tk)
----------------------------------
  * freshclam/dns.c: try to handle broken dns servers (such as in SpeedTouch
		     510), the workaround must be enabled during installation
		     Patch from Arnold Metselaar <arnold.metselaar*planet.nl>
  * configure: new --enable-dns-fix switch

Wed Sep 13 00:50:40 CEST 2006 (tk)
----------------------------------
  * shared/cfgparser.c: fix error path leaks, patch from Mark Pizzolato

Wed Sep 13 00:35:57 CEST 2006 (tk)
----------------------------------
  * configure: add -lresolv to CLAMAV_MILTER_LIBS, patch from Stephen Gran

Wed Sep 13 00:03:30 CEST 2006 (acab)
------------------------------------
  * libclamav: Merge of the html normaliser part of the phishing module from
               Torok Edvin <edwintorok*gmail.com>
               Part of the Google Summer of Code program

Tue Sep 12 22:52:14 CEST 2006 (tk)
----------------------------------
  * clamd: apply w32 patches from NJH

Tue Sep 12 21:59:17 CEST 2006 (acab)
------------------------------------